[package]
name = "poap-sc"
version = "0.0.0"
edition = "2024"
publish = false
authors = ["you"]

[lib]
path = "src/poap_sc.rs"

[dependencies.multiversx-sc]
version = "0.66.2"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.66.2"

[workspace]
members = [
    ".",
    "meta",
]
